# minder

./: .dockerignore  .env.example  .env.marketplace  .env.production.example  .env.template  .gitignore  .isort.cfg  .pre-commit-config.yaml  =3.9.0  ALL-UPDATES-COMPLETE-FINAL.md  ARCHITECTURE.md  AUTHORS.md  BATCH-1-COMPLETE-REPORT.md  BATCH-2-COMPLETE-REPORT.md  BATCH-3-COMPLETE-REPORT.md  BATCH-3-RISK-ANALYSIS.md  CHANGELOG.md  COMPREHENSIVE-FINAL-REPORT.md  COMPREHENSIVE-SYSTEM-ANALYSIS-REPORT.md  COMPREHENSIVE_ANALYSIS_REPORT.md  CONTRIBUTING.md  CRITICAL-FIXES-COMPLETE-REPORT.md  CURRENT_STATUS.md  CURRENT_STATUS_SNAPSHOT.md  DEEP-ARCHITECTURE-ANALYSIS-FINAL.md  DEEP-SYSTEM-VALIDATION-REPORT.md  DEEP_ANALYSIS_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  DOCUMENTATION-INDEX.md  DOCUMENTATION-UPDATE-SUMMARY-2026-05-10.md  Dockerfile  EKSIK-SERVISLER-DUZELTILDI-SONUC.md  FINAL-KOMPREHENSIF-ANALIZ-2026-05-12.md  FINAL-OPTIMIZATION-REPORT.md  FINAL-SOLUTION-SUMMARY.md  FINAL-SUMMARY-REPORT.md  FINAL-SYSTEM-HEALTH-REPORT.md  FINAL-UPDATE-REPORT.md  FINAL-VALIDATION-SETUP-SH-TAMAM-CAKIRILDI.md  (+94 more)
.buildcache/: README.md
.buildcache/metadata/: cache-info.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  auto-update-pr.yml  check-dependency-updates.yml  ci.yml  dependency-update.yml  docker-image-update.yml  quality.yml  security.yml  shell-lint.yml  test.yml
.remember/tmp/: save-session.pid
.serena/: project.yml
.setup/: compose.hash
.setup/scripts/: migrate-to-secrets.sh  rabbitmq-init.sh  rolling-update.sh
.setup/templates/: docker-compose.yml.template
api/: auth.py  github_installer.py  main.py  middleware.py  mobile.py  models.py  monitoring_endpoints.py  plugin_store.py  plugin_store_security.py  security.py
api/auth_endpoints/: __init__.py  routes.py
api/characters/: endpoints.py
api/chat/: endpoints.py
api/correlations/: endpoints.py
api/plugins/: endpoints.py
api/system/: endpoints.py
archive/: ARCHIVED_PLUGINS.md
archive/legacy_plugins/: tefas_module_old.py  tefas_module_v2.py
config/: crypto_config.yml  default_plugins.yml  production.yaml  tefas_config.yml
config/root/: alertmanager.yml
core/: __init__.py  advanced_correlation.py  anomaly_detection.py  character_system.py  config.py  correlation_engine.py  event_bus.py  kernel.py  knowledge_graph.py  knowledge_populator.py  module_interface.py  module_interface_v2.py  plugin_hot_reload.py  plugin_loader.py  plugin_manifest.py  plugin_observability.py  plugin_permissions.py  plugin_sandbox.py  registry.py  voice_interface.py
docker/compose/: .env.example  README.md  docker-compose.override.yml  docker-compose.secrets.yml  docker-compose.yml
docker/services/: README.md
docker/templates/: docker-compose.yml.template
docs/: API_AUTHENTICATION_GUIDE.md  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  CURRENT_STATUS.md  DEPLOYMENT.md  EXTERNAL_SERVICES_GUIDE.md  IMPLEMENTATION_ANALYSIS.md  ISSUES.md  LIBRARY_LATEST_VERSIONS.md  MODULE_DEVELOPMENT.md  OPENWEBUI_INTEGRATION_GUIDE.md  OPENWEBUI_INTEGRATION_TEST.md  P1_RESOLUTION_COMPLETE.md  P1_SECURITY_FIXES_SUMMARY.md  PLUGIN_ARCHITECTURE.md  PLUGIN_DEVELOPMENT.md  PRODUCTION_GUIDE.md  PROFESSIONALISM_ANALYSIS.md  QUICKSTART.md  README.md  REAL_ISSUES_FOUND.md  ROADMAP.md  SECRETS_MANAGEMENT.md  SYSTEM_ANALYSIS_REPORT.md  TROUBLESHOOTING.md  USER_GUIDE.md  VERSION_GUIDE.md  VERSION_MANIFEST.md  VERSION_STRATEGY.md  architecture.md  eda-integration-guide.md  eda-test-results.md  external-services-guide.md  influxdb-setup.md  neo4j-integration-plan.md  quickstart.md  rag-methods.md
docs/api/: README.md  (+2 more)
examples/: README.md  rabbitmq_example.py  requirements.txt
infrastructure/: EXTERNAL_SERVICES_GUIDE.md  docker-compose.yml
marketplace/: .env.local  COMPLETE_IMPLEMENTATION.md  CURRENT_STATUS.md  DEPLOYMENT_GUIDE.md  FINAL_SUMMARY.md  FRONTEND_FIX_REPORT.md  IMPLEMENTATION_SUMMARY.md  LIVE_VERIFICATION.md  PLUGIN_AI_TOOLS_INTEGRATION.md  QUICK_REFERENCE.md  README.md  READY_FOR_TESTING.md  REAL_TEST_REPORT.md  SYSTEM_STATUS.md  VERIFICATION_STATUS.md  next.config.js  package-lock.json  package.json  setup.sh  show-status.sh  start-dev.sh  tailwind.config.js  test-api.js  test-neo4j.py
monitoring/: __init__.py  metrics_collector.py  performance_monitor.py  prometheus_exporter.py
mypy-report/: index.html
nginx/: production.conf
plugins/: __init__.py
production/: deployment_manager.py
scripts/: admin.sh  backup.sh  backup_databases.sh  buildkit-cache.sh  check_pip_updates.py  check_plugins.py  cleanup.sh  cleanup_old_data.sh  deploy.sh  deploy_complete.sh  deploy_production.sh  diagnostics.sh  docker-upgrade-commands.sh  fine_tune.py  generate-secrets.sh  generate_ssl_certs.sh  health-check.sh  logs.sh  manual_plugin_init.py  migrate-to-secrets.sh  modernize-docker.sh  monitoring_cli.py  post-install-config.sh  quick_start.py  restore.sh  restore_databases.sh  rolling-update.sh  security-harden.sh  security_hardening.sh  setup-pre-commit.sh  setup.sh  setup_environment.sh  show_architecture.py  test-performance-validation.sh  test-system-validation.sh  test_tefas_module.py  update_libraries.sh  validate-performance-simple.sh  validate-performance.sh  verify_system.py
src/: __init__.py
src/config/: pyproject.toml  pytest.ini
src/config/requirements/: requirements-dev.txt  requirements.txt
templates/: docker-compose.yml.template  module_template.py
tests/: conftest.py  load_testing.py  test_api_integration.py  test_auth.py  test_auth_simple.py  test_comprehensive.py  test_crypto_api.py  test_module_management.py  test_modules.py  test_plugin_advanced_features.py  test_plugin_sandboxing.py  test_plugin_store.py  test_plugin_store_updated.py  test_plugin_system_comprehensive.py  test_security.py  test_security_simple.py  test_shared_models_responses.py  test_shared_utils_cors.py  test_shared_utils_redis.py  test_shared_utils_service_urls.py  test_system_health.py  test_tefas_integration.py  test_tefas_module.py  test_tefas_simple.py
(+1080 files in other folders)
