[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minder"
version = "1.0.0"
description = "Production-ready modular RAG platform with independent component versioning"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Utkan", email = "mrdotcute@example.com"}
]
maintainers = [
    {name = "Utkan", email = "mrdotcute@example.com"}
]
keywords = [
    "rag",
    "llm",
    "ai",
    "plugins",
    "microservices",
    "vector-database",
    "knowledge-graph"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "fastapi>=0.115.0,<0.120.0",
    "pydantic>=2.10.0,<2.20.0",
    "httpx>=0.28.0,<0.29.0",
    "asyncpg>=0.30.0,<0.31.0",
    "redis>=5.4.2,<5.5.0",
    "python-jose>=3.3.0,<3.4.0",
    "python-multipart>=0.0.9,<0.1.0",
    "python-dotenv>=1.0.0,<1.1.0",
    "aiohttp>=3.9.0,<4.0.0",
    "psutil>=5.9.0,<6.0.0",
    "avro>=1.11.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-asyncio>=0.21.0,<0.22.0",
    "pytest-timeout>=2.2.0,<3.0.0",
    "mypy>=1.8.0,<2.0.0",
    "flake8>=6.1.0,<7.0.0",
    "black>=23.12.0,<24.0.0",
    "isort>=5.13.0,<6.0.0",
]

[project.urls]
Homepage = "https://github.com/wish-maker/minder"
Documentation = "https://github.com/wish-maker/minder/docs"
Repository = "https://github.com/wish-maker/minder"
Issues = "https://github.com/wish-maker/minder/issues"
Changelog = "https://github.com/wish-maker/minder/CHANGELOG.md"

[project.scripts]
minder = "src.core:main"
minder-deploy = "deploy.sh:main"
minder-install = "install.sh:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yml", "*.yaml", "*.json"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | \.tox
  | \.venv
  | \.eggs
  | \.eggs-info
  | \.dist
  | \.build
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.bandit]
skips = ["B101"]  # Skip B101 (assert_used) for test files

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
ignore_missing_imports = true
plugins = []

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
asyncio_mode = "auto"
timeout = 300

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
]
per-file-ignores = [
    "__init__.py:F401",
]
